--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ lectures/tutorials/04_Hyperparameter_optimization_solution.ipynb
 lectures/.DS_Store
 lectures/tutorials/06_Ensembles_Solution.ipynb
 lectures/data/heart.csv
+lectures/202-203-Giulia-lectures/yolov8n.pt
